# suggest-command-not-found

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: auto-release.yml  rust.yml
src/: main.rs
