[package]
name = "suggest-command-not-found"
version = "0.1.8"
edition = "2021"
authors = ["Ken Matsui <26405363+ken-matsui@users.noreply.github.com>"]
description = "Typo correction for not-found shell commands"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ken-matsui/suggest-command-not-found/"
homepage = "https://github.com/ken-matsui/suggest-command-not-found#readme"
documentation = "https://docs.rs/suggest-command-not-found"

[dependencies]
colored = "3"
suggest = "0.5"
